src/test/resources/frontend/fail/enumList.skill
fail {
	list<E> f;
}

enum E {
	a,b;
}